# ChangeLog for www-client/cupage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2010; James Rowe <jnrowe@gmail.com> cupage-0.3.1.ebuild:
  Keyworded amd64.

*cupage-0.4.0 (28 Jan 2010)

  28 Jan 2010; James Rowe <jnrowe@gmail.com> +cupage-0.4.0.ebuild:
  Version bump.

  15 Jan 2010; James Rowe <jnrowe@gmail.com> cupage-0.3.0.ebuild,
  cupage-0.3.1.ebuild:
  simplejson is required for python v2.5 or earlier.

*cupage-0.3.1 (11 Jan 2010)

  11 Jan 2010; James Rowe <jnrowe@gmail.com> +cupage-0.3.1.ebuild:
  Version bump.

  22 Dec 2009; James Rowe <jnrowe@gmail.com> -cupage-0.2.ebuild,
  cupage-0.3.0.ebuild:
  Keyworded x86.

  22 Dec 2009; James Rowe <jnrowe@gmail.com> cupage-0.3.0.ebuild:
  Keyworded amd64.

*cupage-0.3.0 (22 Nov 2009)

  22 Nov 2009; James Rowe <jnrowe@gmail.com> +cupage-0.3.0.ebuild:
  Version bump [c2f].

  01 Nov 2009; James Rowe <jnrowe@gmail.com> cupage-0.2.ebuild:
  Keyworded x86.

  31 Oct 2009; James Rowe <jnrowe@gmail.com> cupage-0.2.ebuild:
  Keyworded amd64.

  19 Oct 2009; James Rowe <jnrowe@gmail.com> cupage-0.2.ebuild:
  Added missing PYTHON_MODNAME.

  02 Oct 2009; James Rowe <jnrowe@gmail.com> cupage-0.2.ebuild:
  Keyworded ~x86.

*cupage-0.2 (01 Oct 2009)

  01 Oct 2009; James Rowe <jnrowe@gmail.com> +cupage-0.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
