@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20090804 virtual/python
-dev-python/lxml || ( >=dev-lang/python-2.6 dev-python/simplejson ) >=app-admin/eselect-python-20090804 virtual/python
-0
-http://github.com/JNRowe/cupage/tarball/0.3.0 -> cupage-0.3.0.tar.gz
-
-http://github.com/JNRowe/cupage
-GPL-3
-A tool to check for updates on web pages
-amd64 x86
-distutils multilib python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
