@@ -6,7 +6,7 @@ http://github.com/JNRowe/cupage/tarball/0.3.1 -> cupage-0.3.1.tar.gz
 http://github.com/JNRowe/cupage
 GPL-3
 A tool to check for updates on web pages
-amd64 ~x86
+amd64 x86
 distutils multilib python toolchain-funcs
 
 
