@@ -1,4 +1,3 @@
-REM 2010-02-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-client/cupage-0.3.1 %a
 REM 2010-02-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 x11-misc/gselt-1.2 %a
 REM 2010-02-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 x11-misc/gselt-1.2 %a
 REM 2010-02-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-perl/Term-Animation-2.4 %a
