@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST cupage-0.3.0.tar.gz 27177 RMD160 27b73687c1b0ba230d07315daf580cf94ae16346 SHA1 40dfbc4f1221e141f49d9c4e11b1f7c49442edc9 SHA256 4f42c6cbc52b723ecf4170ce78173acb87ae95a602cadcacf2be82e23ae8471e
 DIST cupage-0.3.1.tar.gz 27258 RMD160 6253650f5042a20669a38c48bcb7735d28385a80 SHA1 c388b2197c892654923d010b85099272cd139ec7 SHA256 3612559ed1526c26828480fd6af9322f9c8c9be2ad61eb9f6ac83e0ab77d28eb
 DIST cupage-0.4.0.tar.gz 28423 RMD160 38af4e23d2bc3b274f653aafc8a28676b2d36411 SHA1 231d9b493a8add7b2181afebf28dfbd71ddeffa7 SHA256 5c79c4f2d2ae06eddd964b5203002c7bdc508ba39a18478724b13375680c8f46
-EBUILD cupage-0.3.0.ebuild 528 RMD160 21fa280a1d4fcd91d1ceb0d1d946579c0b618a5d SHA1 b1a996eb12b61985ac3df5c6096071385e851773 SHA256 24775c8e42376d2751cd8c9b8e691db49e0870043ab55f0f3e1eda1521825fd8
-EBUILD cupage-0.3.1.ebuild 529 RMD160 4c626e6cd6431aa0c37be722e7d055504cff6ce0 SHA1 5736d5c5b6c1ba0e01e5b7d3c77a53b1a78b4a06 SHA256 739ca2c8db12c7b738e486f838580aa281ee3727a004e3b62af778161fa28da7
+EBUILD cupage-0.3.1.ebuild 528 RMD160 6bad66c4490378f3da8f895d66592d24358d4593 SHA1 fd74da85817f3410881f2c0c568efe471d0b4fd8 SHA256 3ea508769423b5ce00e1748e6a58aa69e6710cb7cacf6a57a8b444624a0b853f
 EBUILD cupage-0.4.0.ebuild 530 RMD160 ab5a254f85bbcae5cc87674ff50a017e3f533816 SHA1 520f28f4db7d6cbffb0ee14b6e67324ad7247406 SHA256 bc98fc0f6fd5a375ff5f7f3b50a17454432e6cc642e86197594ccf64097b4007
-MISC ChangeLog 1365 RMD160 0a0a24a82d07ea2d1d5ef8f20dda4a36b9482d0d SHA1 6fc20315b64cec51962e674ce2d6c5f0102da817 SHA256 c6d1859a8cce235aadfb3148b0cc45cfa4bc6a467ad4ea1d9b1ea2dd06f1a07f
+MISC ChangeLog 1473 RMD160 5f0cce4fd6bc76accfe98b382e7a2e2df742b540 SHA1 e712329f19d14d7fbd4b1d857fcd4d675dabb0ac SHA256 3648282ac7528bb079cea575527a7e0ba558ae7fa10b537bdd680e19741654a8
 MISC metadata.xml 819 RMD160 9eae25d619d6fc3ccb352e621b40e9179083ed7c SHA1 e38e3efe4cde2c19e3103d939580d506b7cd9543 SHA256 82332a72ea3900de3f31cf1c51c0ec57bbccac6589c414ecb1edbebf61deaeac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktyEocACgkQzJrj3cAXR0kSVwCfRV6UXB0EynGL0Xudvb96Hmp3
-kgEAoJ4j6AqNkawmUcON69gJQhrGGbMw
-=lhqi
+iEYEARECAAYFAktyE5QACgkQzJrj3cAXR0khNwCfcAemTNvWAwWVS1Q3HQW7z3G7
+cPUAn1zn6gHqXB/D87cdI4tHcx/vcocx
+=+Z7A
 -----END PGP SIGNATURE-----
