@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Feb 2010; James Rowe <jnrowe@gmail.com> -cupage-0.3.0.ebuild,
+  cupage-0.3.1.ebuild:
+  Keyworded x86.
+
   10 Feb 2010; James Rowe <jnrowe@gmail.com> cupage-0.3.1.ebuild:
   Keyworded amd64.
 
